[project]
name = "try-theme-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.48.0",
    "google-cloud-aiplatform>=1.135.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-spanner>=3.62.0",
    "kfp>=2.15.2",
]
